--- a/spec/spec-runner.html
+++ b/spec/spec-runner.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Jay/Kathryn spec runner</title>
+  <title>Jason/KeMonte spec runner</title>
   <link rel="stylesheet" href="mocha.css">
 </head>
 <body>
